examples/test/testpolicy18414.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy18414
  namespace: namespace265
spec:
  podSelector:
    matchLabels:
      key40: value16
      key14: value48
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key46: value42
          key7: value12
          key16: value14
      podSelector:
        matchLabels:
          key26: value31
          key7: value0
